@@ -1,3 +1,7 @@
+2004-06-07  Larry Jones  <lawrence.jones@ugsplm.com>
+
+	* sanity.sh (basica): More tests for string-based revision inc.
+
 2004-06-04  Larry Jones  <lawrence.jones@ugsplm.com>
 
 	* subr.c (increment_revnum): Rewrite ala RCS to work directly on
